wifi/iptables/iptables0-mod1.rules
# Generated by iptables-save v1.6.0 on Sun Aug 14 01:06:10 2016
*filter
:INPUT ACCEPT [225:67163]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [169:27205]
-A INPUT -i wlp3s0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlp3s0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i wlp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlp3s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 10.42.0.0/24 -o wlp3s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.42.0.0/24 -i wlp3s0 -j ACCEPT
-A FORWARD -i wlp3s0 -o wlp3s0 -j ACCEPT
COMMIT
# Completed on Sun Aug 14 01:06:10 2016
# Generated by iptables-save v1.6.0 on Sun Aug 14 01:06:10 2016
*nat
:PREROUTING ACCEPT [18:1769]
:INPUT ACCEPT [12:807]
:OUTPUT ACCEPT [49:3358]
:POSTROUTING ACCEPT [49:3358]
-A POSTROUTING -s 10.42.0.0/24 ! -d 10.42.0.0/24 -j MASQUERADE
-A PREROUTING -p tcp -m tcp --dport 9991 -j DNAT --to-destination 10.42.0.42:8888
COMMIT
# Completed on Sun Aug 14 01:06:10 2016
