wifi/iptables/iptables1-mod1.rules
# Generated by iptables-save v1.6.0 on Mon Aug 15 00:26:23 2016
*filter
:INPUT ACCEPT [908:140026]
:FORWARD ACCEPT [8:480]
:OUTPUT ACCEPT [926:148186]
-A INPUT -i wlp3s0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlp3s0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i wlp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlp3s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 10.42.0.0/24 -o wlp3s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.42.0.0/24 -i wlp3s0 -j ACCEPT
-A FORWARD -i wlp3s0 -o wlp3s0 -j ACCEPT
COMMIT
# Completed on Mon Aug 15 00:26:23 2016
# Generated by iptables-save v1.6.0 on Mon Aug 15 00:26:23 2016
*nat
:PREROUTING ACCEPT [147:12118]
:INPUT ACCEPT [86:8058]
:OUTPUT ACCEPT [216:21161]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 9991 -j DNAT --to-destination 10.42.0.42:8888
-A POSTROUTING -s 10.42.0.0/24 ! -d 10.42.0.0/24 -j MASQUERADE
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Mon Aug 15 00:26:23 2016
