wifi/iptables/iptables1.rules
# Generated by iptables-save v1.6.0 on Sun Aug 14 01:03:56 2016
*filter
:INPUT ACCEPT [10148:16356316]
:FORWARD ACCEPT [11:660]
:OUTPUT ACCEPT [7270:948996]
-A INPUT -i wlp3s0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlp3s0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i wlp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlp3s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -d 10.42.0.0/24 -o wlp3s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.42.0.0/24 -i wlp3s0 -j ACCEPT
-A FORWARD -i wlp3s0 -o wlp3s0 -j ACCEPT
COMMIT
# Completed on Sun Aug 14 01:03:56 2016
# Generated by iptables-save v1.6.0 on Sun Aug 14 01:03:56 2016
*nat
:PREROUTING ACCEPT [6:382]
:INPUT ACCEPT [6:382]
:OUTPUT ACCEPT [15:1708]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 9991 -j DNAT --to-destination 10.42.0.42:80
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Sun Aug 14 01:03:56 2016
